# York-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Client.xsd  Doxyfile  README.md  _application_8hpp.html  _application_8hpp.js  _asset_8hpp.html  _asset_8hpp__dep__incl.md5  _asset_8hpp__incl.map  _asset_8hpp__incl.md5  _asset_8hpp_source.html  _async_8hpp__incl.map  _command_pool_8hpp__dep__incl.map  _command_pool_8hpp_source.html  _containers_8hpp.html  _containers_8hpp.js  _containers_8hpp__dep__incl.map  _containers_8hpp__dep__incl.md5  _containers_8hpp__incl.map  _containers_8hpp__incl.md5  _containers_8hpp_source.html  _device_8hpp.js  _device_8hpp__dep__incl.map  _device_8hpp__incl.md5  _document_8hpp.html  _document_8hpp__incl.map  _document_8hpp__incl.md5  _document_8hpp_source.html  _entry_8hpp.js  _event_8hpp.html  _event_8hpp.js  _event_8hpp__dep__incl.map  _event_8hpp__incl.map  _event_8hpp__incl.md5  _event_8hpp_source.html  _fence_8hpp.html  _fence_8hpp__dep__incl.map  _frame_data_8hpp__dep__incl.map  (+245 more)
.github/workflows/: cmake.yml
cmake/: EmbedFile.cmake  EmbedShader.cmake  EmbedTemplate.cpp.in  EmbedTemplate.hpp.in  GenerateEmbedFile.cmake
docs/: CNAME  _application_8hpp.html  _application_8hpp.js  _application_8hpp_source.html  _asset_8hpp.html  _asset_8hpp__dep__incl.map  _asset_8hpp__dep__incl.md5  _asset_8hpp_source.html  _async_8hpp.html  _async_8hpp.js  _async_8hpp__dep__incl.map  _async_8hpp__dep__incl.md5  _async_8hpp__incl.md5  _async_8hpp_source.html  _command_pool_8hpp.html  _command_pool_8hpp__dep__incl.md5  _command_pool_8hpp__incl.map  _command_pool_8hpp__incl.md5  _command_pool_8hpp_source.html  _device_8hpp.html  _device_8hpp__dep__incl.md5  _device_8hpp__incl.map  _device_8hpp__incl.md5  _device_8hpp_source.html  _document_8hpp.html  _document_8hpp__incl.md5  _document_8hpp_source.html  _entry_8hpp.html  _entry_8hpp_source.html  _event_8hpp.html  _event_8hpp.js  _event_8hpp__dep__incl.map  _event_8hpp__dep__incl.md5  _event_8hpp__incl.map  _event_8hpp__incl.md5  _event_8hpp_source.html  _fence_8hpp.html  _fence_8hpp__dep__incl.md5  _fence_8hpp__incl.map  _fence_8hpp__incl.md5  (+400 more)
docs/html/: _application_8hpp.html  _log_8hpp_source.html  _york_8hpp.html  _york_8hpp_source.html  annotated.html  classes.html  dir_8d12484c773ab45ee79a32279975bc3b.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespaceyork.html  namespaceyork_1_1log.html  namespaceyork_1_1log_1_1core.html
docs/html/search/: all_0.js  all_4.js  all_7.js  all_b.js  all_c.js  classes_0.js  files_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  namespaces_0.js  searchdata.js
docs/latex/: _application_8hpp.tex  _application_8hpp_source.tex  _entry_8hpp.tex  _entry_8hpp_source.tex  _log_8hpp.tex  _log_8hpp_source.tex  _york_8hpp.tex  _york_8hpp_source.tex  annotated.tex  classyork_1_1_application.tex  dir_8d12484c773ab45ee79a32279975bc3b.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  namespaces.tex  namespaceyork.tex  namespaceyork_1_1log.tex  namespaceyork_1_1log_1_1core.tex  refman.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  concepts_0.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+51 more)
include/york/: Application.hpp  Asset.hpp  Async.hpp  Config.hpp.in  Containers.hpp  Entry.hpp  Event.hpp  Exit.hpp  Identifiable.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Node.hpp  Registry.hpp  StopWatch.hpp  Timer.hpp  Window.hpp  York.hpp
include/york/Graphics/: CommandPool.hpp  Device.hpp  Fence.hpp  FrameData.hpp  Framebuffer.hpp  Handle.hpp  ImageView.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  RequestableItem.h  RequestableItem.hpp  Semaphore.hpp  Shader.hpp  ShaderDB.hpp.in  Surface.hpp  SwapChain.hpp  Window.hpp
include/york/Renderer/: Renderer.hpp  RendererImpl.hpp  Vertex.hpp
latex/: md__r_e_a_d_m_e.tex  refman.tex
runtime/: LayerLoader.cpp  LayerLoader.hpp  LayerStack.cpp  LayerStack.hpp  Runtime.cpp
sample/: CMakeLists.txt  Client.xml  README.md  SampleLayer.cpp
search/: all_0.js  all_1.js  all_10.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_2.js  classes_5.js  classes_6.js  classes_a.js  classes_c.js  classes_e.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_c.js  files_0.js  files_1.js  files_2.js  files_4.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_a.js  (+11 more)
src/: Application.cpp  Asset.cpp  Async.cpp  Event.cpp  Exit.cpp  Identifiable.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Node.cpp  Registry.cpp  StopWatch.cpp  SwapChain.cpp  Timer.cpp  Window.cpp
src/Graphics/: CommandPool.cpp  Device.cpp  Fence.cpp  FrameData.cpp  Framebuffer.cpp  Framebuffer.hpp  Handle.cpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  RenderPass.cpp  RenderPass.hpp  Semaphore.cpp  Semaphore.hpp  Shader.cpp  Surface.cpp  SwapChain.cpp  SwapChain.hpp  Window.cpp
src/Renderer/: Renderer.cpp  RendererImpl.cpp  VulkanRendererImpl.cpp  VulkanRendererImpl.hpp
src/XML/: Document.cpp  Tag.cpp
test/: App.cpp  SampleLayer.cpp  SampleLayer.hpp
utils/: InstallDependencies.bat  InstallDependencies.sh  Setup.bat  Setup.py  Setup.sh
utils/pipeline/: Fedora.sh  InstallVulkan.sh  Setup.py  Ubuntu.sh  Windows.bat  Windows.ps1
(+37 files in other folders)
